--- a/index.html
+++ b/index.html
@@ -72,8 +72,38 @@
 													<a href="#">Каталог</a>
 
 													<ul class="menu__dropdown_list" hidden>
-														<li class="menu-item">
+														<li class="menu-item menu__dropdown">
 															<a href="#">Антенны</a>
+
+															<ul class="menu__dropdown_list" hidden>
+																<li class="menu-item">
+																	<a href="#">Антенны</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">ВЧ и СВЧ коннекторы</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">ВЧ и СВЧ кабель</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">Кабельные сборки</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">СВЧ компоненты SRTechnology</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">Источники питания</a>
+																</li>
+
+																<li class="menu-item">
+																	<a href="#">Термоусаживаемая трубка</a>
+																</li>
+															</ul>
 														</li>
 
 														<li class="menu-item">
